<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".startupui.StartupActivity">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/logo_globe"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Track My Location"
        android:textSize="20sp"
        android:textColor="@color/appNameText"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textAlignment="center"
        android:text="@string/app_desc"
        android:textSize="16sp"
        android:textColor="@color/subText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textAlignment="center"
        android:text="@string/sign_in_desc"
        android:textSize="12sp"
        android:textColor="@color/subSubText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_btn_login"
        android:onClick="onSignInClicked"
        android:textColor="@android:color/white"
        android:text="@string/login"/>

</LinearLayout>