<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sharelocation.ShareLocationActivity">

    <include layout="@layout/partial_toolbar"/>

    <Button
        android:id="@+id/btn_broadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="onBroadcastBtnClick"
        android:background="@drawable/bg_btn_start"
        android:textColor="@android:color/white"
        android:text="@string/start"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/device_id"/>
            <TextView
                android:id="@+id/text_dev_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic|bold"
                android:text="-"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/lat_long"/>
            <TextView
                android:id="@+id/text_curr_latlng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic|bold"
                android:text="-"/>
        </LinearLayout>
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sharelocation.ShareLocationActivity"/>

</LinearLayout>